--- a/vignettes/casestudy.Rmd
+++ b/vignettes/casestudy.Rmd
@@ -577,8 +577,16 @@ You can see the results below, as "async2":
 
 ![](case-study-gantt3.png)
 
-You can see the [code changes here](https://github.com/rstudio/cranwhales/compare/async...async2?diff=split). The code has not changed that much, but I do feel it has lost some elegance and maintainability, simply because the code for each of the affected outputs now has one foot in the the render function and one foot in the future. If your app's total audience is a team of a hundred analysts and execs, you might want to just forgo the extra performance and stick with the clearer, more maintainable code. But if you have serious scaling needs, this is probably a small price to pay.
+The homepage load times have dropped further, and the calculation times are now as fast or faster than the sync code pretty much across the board. The overall test completion time has dropped by an additional minute compared to our previous effort.
 
-(Let's get real for a second, though. If this weren't an example app written for exposition purposes, but a real production app that was intended to scale to thousands of concurrent users across dozens of R processes, we wouldn't download and parse CSV files on the fly. Instead, we'd establish a proper [ETL procedure](http://solutions.rstudio.com/twitter_etl/) to run every night and put the results into a properly indexed database table, or RDS files with just the data we need.)
+Note also that the maximum "skyscraper height" has gone down, not up, as might've been expected. While the sync version's effective concurrency was limited because of long page load times, the reason for async2 is the opposite: sessions are finishing more quickly than before, so they aren't stacking up as much. In other words, the sync version's sessions are slow to come in through the front door, while async2's sessions are quick to leave through the back.
+
+Take a look at the [code diff for async vs. async2](https://github.com/rstudio/cranwhales/compare/async...async2?diff=split). While the code has not changed very dramatically, it has lost a little elegance and maintainability: the code for each of the affected outputs now has one foot in the the render function and one foot in the future. If your app's total audience is a team of a hundred analysts and execs, you may choose to forgo the extra performance and stick with the original async (or even sync) code. But if you have serious scaling needs, the refactoring is probably a small price to pay.
+
+Let's get real for a second, though. If this weren't an example app written for exposition purposes, but a real production app that was intended to scale to thousands of concurrent users across dozens of R processes, we wouldn't download and parse CSV files on the fly. Instead, we'd establish a proper [ETL procedure](http://solutions.rstudio.com/twitter_etl/) to run every night and put the results into a properly indexed database table, or RDS files with just the data we need.
 
 At this point, the clear majority of the latency for the async2 branch is from ggplot2 plotting. [Sean's talk](https://www.rstudio.com/resources/videos/scaling-shiny/) alluded to some upcoming plot caching features we're adding to Shiny, and I imagine they would have as dramatic an effect for this test as they did for Sean.
+
+## Summing up
+
+
